# libclio

./: .gitignore  Doxyfile  Makefile.am  README.md  build.sh  clio.pc.in  clio15.sln  clio15.vcxproj  clio19.sln  clio19.vcxproj  clio19.vcxproj.filters  configure.ac
debian/: changelog  control  copyright  rules
src/: Makefile.am  appender.cpp  appender.h  appenderfactory.cpp  appenderfactory.h  clio.cpp  clio.h  clioapi.h  dllmain.cpp  example.config  hexdump.cpp  hexdump.h  layout.cpp  layout.h  layoutfactory.cpp  layoutfactory.h  logger.cpp  logger.h  loggermanager.cpp  loggermanager.h  loglevel.cpp  loglevel.h  logline.cpp  logline.h  propertymap.h  tinyxml2.cpp  tinyxml2.h
src/appenders/: consoleappender.cpp  consoleappender.h  fileappender.cpp  fileappender.h  rollingfileappender.cpp  rollingfileappender.h
src/layouts/: patternlayout.cpp  patternlayout.h
